<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="101"
        android:title="@string/connect"/>
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="102"
        android:title="@string/disconnect"/>
    <item
        android:id="@+id/menu_server_start"
        android:orderInCategory="103"
        android:title="@string/accept_connection"/>
    <item
        android:id="@+id/menu_server_stop"
        android:orderInCategory="104"
        android:title="@string/stop_listening"/>
    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="105"
        android:title="@string/clear_conversion"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="106"
        android:title="@string/about"/>

</menu>