<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ac.titech.itpro.sdl.transceiver.MainActivity">

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_text_disconnected"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <ProgressBar
        android:id="@+id/connection_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/send_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/send_button"
        android:hint="@string/input_text_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recognize"
        android:id="@+id/recognize_button"
        android:layout_above="@+id/send_button"
        android:layout_centerHorizontal="true" />
    <ListView
        android:id="@+id/chat_log_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connection_progress"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/recognize_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speak"
        android:id="@+id/speak_button"
        android:layout_above="@+id/input_text"
        android:layout_toEndOf="@+id/recognize_button" />


</RelativeLayout>
